tester/testsuite/extensions/objects1/bad/bad006.jl
class Zoom extends Boom {
    int a;
}

class Boom {
    int a;
    int b;
}

int main() {
    return 0;
}